--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/sc-timeline-addin/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/sc-timeline-addin/manifest.json"/><title>React App</title><script defer="defer" src="/sc-timeline-addin/static/js/main.b67dd12e.js"></script><link href="/sc-timeline-addin/static/css/main.e6c13ad2.css" rel="stylesheet"><script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8"/>
+		<link rel="icon" href="/sc-timeline-addin/favicon.ico"/>
+		<meta name="viewport" content="width=device-width,initial-scale=1"/>
+		<meta name="theme-color" content="#000000"/>
+		<meta name="description" content="Web site created using create-react-app"/>
+		<link rel="apple-touch-icon" href="/sc-timeline-addin/logo192.png"/>
+		<link rel="manifest" href="/sc-timeline-addin/manifest.json"/>
+		<title>React App</title>
+		<script defer="defer" src="/sc-timeline-addin/static/js/main.b67dd12e.js"/>
+		<link href="/sc-timeline-addin/static/css/main.e6c13ad2.css" rel="stylesheet">
+			<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"/>
+		</head>
+		<body>
+			<noscript>You need to enable JavaScript to run this app.</noscript>
+			<div id="root"/>
+		</body>
+	</html>
